[sc-8897] manager display the zone of each kb (#1338)
* Fix variable import

* Display zones in account details sidenav

  - Use zone service as a store for zones
  - replace `getZoneSlugs` by `getZoneDict`
  - replace `zoneId` by `zone` in KbSummary model

* Fix loadKbCounters method and add zone in KB table

* Add zone in KB details

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.scss
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'apps/manager-v2/src/variables';
 
 .account-info {
   background: $color-neutral-lightest;
@@ -7,4 +7,8 @@
   gap: rhythm(1);
   margin: rhythm(1) rhythm(2) rhythm(2);
   padding: rhythm(1);
+}
+
+.zone-name {
+  color: $color-neutral-regular;
 }
