--- a/libs/common/src/lib/kb-add/kb-add.component.html
+++ b/libs/common/src/lib/kb-add/kb-add.component.html
@@ -12,6 +12,7 @@
           <pa-input
             id="kb-title"
             formControlName="title"
+            data-cy="new-kb-name-input"
             [errorMessages]="validationMessages['title']">
             {{ 'kb.name' | translate }}
           </pa-input>
@@ -19,6 +20,7 @@
           <pa-textarea
             id="kb-description"
             formControlName="description"
+            data-cy="new-kb-description-input"
             [rows]="4">
             {{ 'generic.description' | translate }}
           </pa-textarea>
@@ -27,6 +29,7 @@
             <div class="kb-add-zone">
               <pa-select
                 formControlName="zone"
+                data-cy="new-kb-zone-select"
                 [label]="'generic.zone' | translate"
                 [readonly]="zones.length === 1"
                 class="kb-add-zone-select">
@@ -45,9 +48,10 @@
             @if (isAnonymizationEnabled | async) {
               <pa-toggle
                 formControlName="anonymization"
+                data-cy="new-kb-anonymization"
                 labelOnRight
-                [help]="'kb.settings.anonymization_toggle.help' | translate">
-                {{ 'kb.settings.anonymization_toggle.label' | translate }}
+                [help]="'kb.ai-models.anonymization_toggle.help' | translate">
+                {{ 'kb.ai-models.anonymization_toggle.label' | translate }}
               </pa-toggle>
             }
           </div>
@@ -78,6 +82,7 @@
           <pa-button
             type="submit"
             kind="primary"
+            data-cy="new-kb-save-button"
             [disabled]="saving"
             (click)="save()">
             {{ 'generic.save' | translate }}
@@ -86,6 +91,7 @@
 
         @if (step < lastStep) {
           <pa-button
+            data-cy="new-kb-next-button"
             [disabled]="step === 0 && kbForm?.invalid"
             (click)="next()">
             {{ 'generic.next' | translate }}
