[sc-9023] Typo in account home page

--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -8,7 +8,7 @@
       <div class="processing-stats">
         <div class="consumption-header">
           <div>
-            <h2>{{ 'account.monthly_consumibles' | translate }}</h2>
+            <h2>{{ 'account.monthly_consumables' | translate }}</h2>
             <div>{{ 'account.accumulated_consumption' | translate }}</div>
           </div>
           <pa-button
