--- a/apps/dashboard/src/app/account/account-users/account-users.component.html
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.html
@@ -1,7 +1,7 @@
 <div
   class="account-users page-spacing"
   *ngIf="users">
-  <h1>{{ 'sidenav.users' | translate }}</h1>
+  <h1>{{ 'navbar.users' | translate }}</h1>
 
   <div>
     <div class="users-amount">
