[sc-8623] Download feedback CSV on dashboard (#1353)
* [sc-8623] Download feedback CSV on dashboard

* Small fixes

--- a/apps/dashboard/src/app/activity/activity-download.component.html
+++ b/apps/dashboard/src/app/activity/activity-download.component.html
@@ -1,5 +1,5 @@
 <div class="page-spacing">
-  <h1>{{ 'sidenav.activity' | translate }}</h1>
+  <h1>{{ 'navbar.activity' | translate }}</h1>
   <pa-tabs
     class="primary-tabs"
     noSlider
@@ -19,24 +19,24 @@
     <pa-tabs
       class="secondary-tabs"
       notFullWidth>
-      <pa-tab
-        *ngFor="let eventType of eventTypes[selectedTab]"
-        [active]="eventType === selectedEventType"
-        (click)="selectedEventType = eventType">
-        {{ 'activity.' + eventType.toLowerCase() | translate }}
-      </pa-tab>
+      @for (tab of activityTabs[selectedTab]; track tab) {
+        <pa-tab
+          [active]="tab === selectedActivityTab"
+          (click)="selectedActivityTab = tab">
+          {{ 'activity.type.' + tab.toLowerCase() | translate }}
+        </pa-tab>
+      }
     </pa-tabs>
     <div class="download-list">
-      <div
-        *ngFor="let item of activity[selectedEventType] | async"
-        class="download-item">
-        <div class="body-m">{{ item.formatted }}</div>
-        <pa-button
-          icon="download"
-          aspect="basic"
-          size="small"
-          (click)="download(item.month)"></pa-button>
-      </div>
+      @for (item of activity[selectedActivityTab] | async; track item.month) {
+        <div class="download-item">
+          <div class="body-m">{{ item.formatted }}</div>
+          <pa-button
+            icon="download"
+            aspect="basic"
+            (click)="download(item.month)"></pa-button>
+        </div>
+      }
     </div>
   </div>
 </div>
