[sc-8853] Prevent long words from breaking resource table layout

--- a/libs/common/src/lib/resources/resource-list/title-cell/title-cell.component.scss
+++ b/libs/common/src/lib/resources/resource-list/title-cell/title-cell.component.scss
@@ -15,6 +15,7 @@
     }
 
     .title-and-description {
+      overflow-wrap: anywhere;
       a {
         color: inherit;
         font-weight: inherit;
