display logs for curent sync

--- a/libs/sync/src/lib/upload/sync.component.html
+++ b/libs/sync/src/lib/upload/sync.component.html
@@ -42,7 +42,9 @@
   </pa-tab>
 </pa-tabs>
 @if (selectedTab === 'activity') {
-  <section>TO BE DONE</section>
+  <section>
+    <nsy-activity></nsy-activity>
+  </section>
 }
 @if (selectedTab === 'settings') {
   <section>
