Display sync title + add kdid in sync id to avoid conflicts

--- a/libs/sync/src/lib/upload/add-sync.component.html
+++ b/libs/sync/src/lib/upload/add-sync.component.html
@@ -10,9 +10,7 @@
     qa="fields-form"
     (ngSubmit)="save()">
     <div class="field">
-      <pa-input
-        formControlName="id"
-        [errorMessages]="validationMessages['id']">
+      <pa-input formControlName="title">
         {{ 'upload.source.name' | translate }}
       </pa-input>
     </div>
